fix problmes with lint

--- a/homeworks/kostya.bublyk_ConstBagel/4-modules/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/4-modules/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Modules</title>
-        <link rel="stylesheet" href="css/style.css" />
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-        <meta content="utf-8" http-equiv="encoding" />
+        <link rel="stylesheet" href="css/style.css">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
     </head>
     <body>
         <div class="wrapper">
@@ -14,20 +14,20 @@
                     type="date"
                     class="date-picker"
                     data-role="input-date-field"
-                />
-                <button class="btn" data-role="get-fridays-button">
+                >
+                <button type="button" class="btn" data-role="get-fridays-button">
                     Get month Fridays
                 </button>
                 <p class="result" data-role="get-fridays-output"></p>
-                <button class="btn" data-role="is-month-long-button">
+                <button type="button" class="btn" data-role="is-month-long-button">
                     Is month long?
                 </button>
                 <p class="result" data-role="is-month-long-output"></p>
-                <button class="btn" data-role="days-shortest-week-button">
+                <button type="button" class="btn" data-role="days-shortest-week-button">
                     Days of shortest weeks in month
                 </button>
                 <p class="result" data-role="days-shortest-week-output"></p>
-                <button class="btn" data-role="full-week-month-button">
+                <button type="button" class="btn" data-role="full-week-month-button">
                     Full weeks in month
                 </button>
                 <p class="result" data-role="full-week-month-output"></p>
