--- a/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
@@ -7,28 +7,26 @@
     </head>
     <body>
         <section class="main">
-            <div class="main__left">
-                <p class="left__title">
-                    Date
-                </p>
-                <input type="text" data-input-date class="left__input" value="11/11/2021">
-                <button type="submit" data-mondays class="left__button">
-                    Get month mondays
-                </button>
-                <div class="left__result" data-mondays-result></div>
-                <button type="submit" data-is-long class="left__button">
-                    Is month long?
-                </button>
-                <div class="left__result" data-is-long-result></div>
-                <button type="submit" data-shortest-week class="left__button">
-                    Days in shortest week
-                </button>
-                <div class="left__result" data-shortest-week-result></div>
-                <button type="submit" data-full-weeks class="left__button">
-                    Full weeks in month
-                </button>
-                <div class="left__result" data-full-weeks-result></div>
-            </div>
+            <h1 class="main__title">
+                Date
+            </h1>
+            <input type="date" data-input-date class="main__input">
+            <button data-mondays class="main__button">
+                Get month mondays
+            </button>
+            <div class="main__result" data-mondays-result></div>
+            <button data-is-long class="main__button">
+                Is month long?
+            </button>
+            <div class="main__result" data-is-long-result></div>
+            <button data-shortest-week class="main__button">
+                Days in shortest week
+            </button>
+            <div class="main__result" data-shortest-week-result></div>
+            <button data-full-weeks class="main__button">
+                Full weeks in month
+            </button>
+            <div class="main__result" data-full-weeks-result></div>
         </section>
         <script type="module" src="index.js"></script>
     </body>
