--- a/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
@@ -11,19 +11,19 @@
                 Date
             </h1>
             <input type="date" data-input-date class="main__input">
-            <button type='' data-mondays class="main__button">
+            <button type="button" data-mondays class="main__button">
                 Get month mondays
             </button>
             <div class="main__result" data-mondays-result></div>
-            <button type='' data-is-long class="main__button">
+            <button type="button" data-is-long class="main__button">
                 Is month long?
             </button>
             <div class="main__result" data-is-long-result></div>
-            <button type='' data-shortest-week class="main__button">
+            <button type="button" data-shortest-week class="main__button">
                 Days in shortest week
             </button>
             <div class="main__result" data-shortest-week-result></div>
-            <button type='' data-full-weeks class="main__button">
+            <button type="button" data-full-weeks class="main__button">
                 Full weeks in month
             </button>
             <div class="main__result" data-full-weeks-result></div>
