--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
@@ -14,12 +14,12 @@
             <input type="date" value="2021-11-12" class="date__input" data-date__input></input>
         </section>
         <section class="section" data-get-mondays>
-            <button class="get-mondays__button" data-get-mondays__button>Get month mondays</button>
+            <button  class="get-mondays__button" data-get-mondays__button>Get month mondays</button>
             <p class="get-mondays__output" data-get-mondays__output></p>
         </section>
         <section class="section" data-month-long>
             <button class="month-long__button" data-month-long__button>Is month long?</button>
-            фывфвфвф <p class="month-long__output" data-month-long__output></p>
+            <p class="month-long__output" data-month-long__output></p>
         </section>
         <section class="section" data-shortest-week-day>
             <button class="shortest-week-days__button" data-shortest-week-days__button>Days of shortest week in month</button>
