--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
@@ -33,7 +33,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script type="module" src="time.js"></script>
 </body>
 </html>
