--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./time.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -32,8 +34,6 @@
     </main>
 
 
-
-    <script type="module" src="script.js"></script>
-    <script type="module" src="time.js"></script>
+    
 </body>
 </html>
