--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
@@ -9,17 +9,17 @@
     </head>
     <body>
         <container class="outer_shell">
-            <main class="main__form_manipulation_calendar" data-main-form>
+            <main class="main__form_manipulation-calendar" data-main-form>
                 <h3 class="name_data">Data:</h3>
-                <input type="date" name="calendar" class="calendar_for_take_data" data-take-calendar>
-                <input type="button" value="Get month monday" class="btn__add_event" data-get-monday>
-                <div class="out-information" data-out-monday></div>
-                <input type="button" value="Is month long?" class="btn__add_event" data-long-month>
-                <div class="out-information" data-out-long-month></div>
-                <input type="button" value="Days of shortest week in month" class="btn__add_event" data-shortest-week>
-                <div class="out-information" data-short-week></div>
-                <input type="button" value="Full weeks in month" class="btn__add_event" data-full-weeks>
-                <div class="out-information" data-out-full-weeks></div>
+                <input type="date" name="calendar" class="main__input_data" data-take-calendar>
+                <input type="button" value="Get month monday" class="main__btn_add-event" data-get-monday>
+                <div class="main__div_out-information" data-out-monday></div>
+                <input type="button" value="Is month long?" class="main__btn_add-event" data-long-month>
+                <div class="main__div_out-information" data-out-long-month></div>
+                <input type="button" value="Days of shortest week in month" class="main__btn_add-event" data-shortest-week>
+                <div class="main__div_out-information" data-short-week></div>
+                <input type="button" value="Full weeks in month" class="main__btn_add-event" data-full-weeks>
+                <div class="main__div_out-information" data-out-full-weeks></div>
             </main>
         </container>
         <script type="module" src="script.js"></script>
