--- a/homeworks/Aleksandr.Turuta_turuta7/4-modules/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/4-modules/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script type="module" src="script.js"></script>
     </body>
 
 </html>
