--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/4-modules/index.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/4-modules/index.html
@@ -7,27 +7,25 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <main class="box">
+        <main class="main-container">
             <h2 class="input-title">Date:</h2>
-            <input class="input-date input-date--active" type="date" value="2021-11-11" data-input-date>
-            <article class="section">
-                <button class="section__button section__button--active" type="button" data-button-get-mondays>Get month mondays</button>
+            <input class="input-date" type="date" value="2021-11-11" data-input-date>
+            <div class="info-block">
+                <button class="info-block__button" type="button" data-button-get-mondays>Get month mondays</button>
                 <span data-info-get-mondays></span>
-            </article>
-            <article class="section">
-                <button class="section__button section__button--active" type="button" data-button-month-long>Is month long?</button>
+            </div>
+            <div class="info-block">
+                <button class="info-block__button" type="button" data-button-month-long>Is month long?</button>
                 <span data-info-month-long></span>
-            </article>
-            <article class="section">
-                <button class="section__button section__button--active" type="button" data-button-shortest-week>Days of shortest week in
-                    month
-                </button>
+            </div>
+            <div class="info-block">
+                <button class="info-block__button" type="button" data-button-shortest-week>Days of shortest week in month</button>
                 <span data-info-shortest-week></span>
-            </article>
-            <article class="section">
-                <button class="section__button section__button--active" type="button" data-button-full-weeks>Full weeks in month</button>
+            </div>
+            <div class="info-block">
+                <button class="info-block__button" type="button" data-button-full-weeks>Full weeks in month</button>
                 <span data-info-full-weeks></span>
-            </article>
+            </div>
         </main>
         <script type="module" src="./js/main.js"></script>
     </body>
