--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-layouts/grid/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-layouts/grid/index.html
@@ -1,51 +1,21 @@
-.container {
-  display: grid;
-  grid-template: 20% 60% 20% / 1fr 1fr 1fr;
-  max-width: 800px;
-  margin: auto;
-}
-
-.header {
-  background-color: rgb(255, 243, 72);
-  width: 100%;
-  min-height: 150px;
-  grid-area: 1 / 1 / 1 / 4;
-  text-align: center;
-}
-
-.main {
-  display: grid;
-  grid-template: 1fr / 1fr 2.2fr 1fr;
-  grid-area: 2 / 1 / 2 / 4;
-  min-height: 500px;
-}
-
-.left {
-  background-color: rgb(109, 255, 72);
-  height: 100%;
-  min-width: 150px;
-  text-align: center;
-}
-
-.middle {
-  background-color: rgb(20, 67, 194);
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  color: rgb(255, 255, 255)
-}
-
-.right {
-  background-color: rgb(109, 255, 72);
-  height: 100%;
-  min-width: 150px;
-  text-align: center;
-}
-
-.footer {
-  background-color: rgb(255, 243, 72);
-  width: 100%;
-  max-height: 100px;
-  grid-area: 3 / 1 / 3 / 4;
-  text-align: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Holy Grail Layou</title>
+    </head>
+    <body>
+        <div class="container">
+            <header class="header">header</header>
+            <main class="main">
+                <aside class="left">left</aside>
+                <div class="middle">middle</div>
+                <aside class="right">right</aside>
+            </main>
+            <footer class="footer"> footer</footer>        
+        </div>
+    </body>
+</html>
