--- a/homeworks/roman.kushnirenko_skyprog/4-modules/index.html
+++ b/homeworks/roman.kushnirenko_skyprog/4-modules/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <main class="all__date">
         <section class="getdate">
@@ -15,19 +17,19 @@
                 <input type="date" class="input">
             </div>
             <div class="mondays">
-                <button class="btn" data-mondays-btn>Get month mondays</button>
+                <button class="btn" data-mondays-btn type="button">Get month mondays</button>
                 <div class="mondays__result show_result" data-mondays></div>
             </div>
             <div class="monthlong">
-                <button class="btn" data-monthlong-btn>Is month long?</button>
+                <button class="btn" data-monthlong-btn type="button">Is month long?</button>
                 <div class="monthlong__result show_result" data-monthlong></div>
             </div>
             <div class="fullweeks">
-                <button class="btn" data-fullweeks-btn>Full weeks in month</button>
+                <button class="btn" data-fullweeks-btn type="button">Full weeks in month</button>
                 <div class="fullweeks__result show_result" data-fullweeks></div>
             </div>
             <div class="shotestweek">
-                <button class="btn">Days of shortest week in month</button>
+                <button class="btn" type="button">Days of shortest week in month</button>
                 <div class="shotestweek__result show_result"></div>
             </div>
         </section>
@@ -44,4 +46,5 @@
 
     <script type="module" src="./js.js"></script>
 </body>
+
 </html>
