add code style fixes

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/index.html
@@ -10,7 +10,7 @@
     <body>
         <main class="main">
             <div class="controls">
-                <label class="data control">Data:</label>
+                <h2 class="data control">Data:</h2>
                 <input type="date" class="control__input control" data-input>
                 <button type="button" class="control__button control" data-month-length>Is month long?</button>
                 <label class="out-info control" data-length></label>
