--- a/homeworks/andrii.kholodenko_AndriiCold/4-modules/index.html
+++ b/homeworks/andrii.kholodenko_AndriiCold/4-modules/index.html
@@ -2,26 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Data</title>
+        <title>Date</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="page-body">
-        <input type="date" class="input_date" data-input-date>
+        <label>
+            <input type="date" class="input_date" data-input-date>Enter the date
+        </label>
         <div class="container">
             <button type="button" class="button" data-button-mondays>Get month mondays</button>
-            <div data-out-fridays></div>
+            <span class="text" data-out-mondays></span>
         </div>
         <div class="container">
             <button type="button" class="button" data-button-month-long>Is month long?</button>
-            <div data-out-month-long></div>
+            <span class="text" data-out-month-long></span>
         </div>
         <div class="container">
             <button type="button" class="button" data-button-short-week>Days of short test week in month</button>
-            <div data-out-short-week></div>
+            <span class="text" data-out-short-week></span>
         </div>
         <div class="container">
             <button type="button" class="button" data-button-full-weeks>Full weeks in month</button>
-            <div data-out-full-weeks></div>
+            <span class="text" data-out-full-weeks></span>
         </div>
         <script type="module" src="script/main.js"></script>
     </body>
