fixed infinity cycle and class name

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
@@ -8,18 +8,18 @@
         <title>4-modules</title>
     </head>
     <body>
-        <container class="outer_shell">
-            <main class="main__form_manipulation-calendar" data-main-form>
-                <h3 class="name_data">Data:</h3>
-                <input type="date" name="calendar" class="main__input_data" data-take-calendar>
-                <input type="button" value="Get month monday" class="main__btn_add-event" data-get-monday>
-                <div class="main__div_out-information" data-out-monday></div>
-                <input type="button" value="Is month long?" class="main__btn_add-event" data-long-month>
-                <div class="main__div_out-information" data-out-long-month></div>
-                <input type="button" value="Days of shortest week in month" class="main__btn_add-event" data-shortest-week>
-                <div class="main__div_out-information" data-short-week></div>
-                <input type="button" value="Full weeks in month" class="main__btn_add-event" data-full-weeks>
-                <div class="main__div_out-information" data-out-full-weeks></div>
+        <container class="outer-shell">
+            <main class="main__form" data-main-form>
+                <h3 class="main__data-name">Data:</h3>
+                <input type="date" name="calendar" class="main__input-data" data-take-calendar>
+                <input type="button" value="Get month monday" class="main__btn" data-get-monday>
+                <div class="main__div-out" data-out-monday></div>
+                <input type="button" value="Is month long?" class="main__btn" data-long-month>
+                <div class="main__div-out" data-out-long-month></div>
+                <input type="button" value="Days of shortest week in month" class="main__btn" data-shortest-week>
+                <div class="main__div-out" data-short-week></div>
+                <input type="button" value="Full weeks in month" class="main__btn" data-full-weeks>
+                <div class="main__div-out" data-out-full-weeks></div>
             </main>
         </container>
         <script type="module" src="script.js"></script>
