--- a/homeworks/andrii.revskyi_RevskyAndrey/4-modules/index.html
+++ b/homeworks/andrii.revskyi_RevskyAndrey/4-modules/index.html
@@ -8,9 +8,8 @@
     <body>
         <section class="app">
             <form class="form" data-form onsubmit="return false">
-                <label class="label">Date:</label>
-                <input value="2021-11-11" data-input class="data-input" placeholder="Enter Date" type="date">
-                <br>
+                <label for="date" class="label">Date:</label>
+                <input value="2021-11-11" data-input class="input" placeholder="Enter Date" type="date" id="date">
                 <button type="button" class="btn" data-btn-monday>Get month mondays</button>
                 <p class="text">
                     Mondays: <span data-text-monday></span>
@@ -33,8 +32,8 @@
             </form>
 
             <div class="time-box">
-                <p class="time" data-time>00:00:00</p>
-                <select class="select" data-select-timezone>
+                <time class="time-box__clock" data-datatime datatime="00:00:00">00:00:00</time>
+                <select class="time-box__select" data-select-timezone>
                     <option value="Current" selected> Current time</option>
                     <option value="Tokyo"> Tokyo</option>
                     <option value="London"> London</option>
