add fixes related to comments

--- a/homeworks/kostya.bublyk_ConstBagel/4-modules/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/4-modules/index.html
@@ -7,9 +7,9 @@
         <meta content="utf-8" http-equiv="encoding">
     </head>
     <body>
-        <div class="wrapper">
+        <div class="page-wrapper">
             <main class="main-block">
-                <label>Date:</label>
+                <h1 class="main-title">Date:</h1>
                 <input
                     type="date"
                     class="date-picker"
