--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
@@ -9,16 +9,16 @@
     </head>
     <body>
         <container class="outer-shell">
-            <main class="main__form" data-main-form>
+            <main class="main" data-main-form>
                 <h3 class="main__data-name">Data:</h3>
-                <input type="date" name="calendar" class="main__input-data" data-take-calendar>
-                <input type="button" value="Get month monday" class="main__btn" data-get-monday>
+                <input class="main__input-data" type="date" name="calendar"  data-take-calendar>
+                <input class="main__btn" type="button" value="Get month monday" data-get-monday>
                 <div class="main__div-out" data-out-monday></div>
-                <input type="button" value="Is month long?" class="main__btn" data-long-month>
+                <input class="main__btn" type="button" value="Is month long?" data-long-month>
                 <div class="main__div-out" data-out-long-month></div>
-                <input type="button" value="Days of shortest week in month" class="main__btn" data-shortest-week>
+                <input class="main__btn" type="button" value="Days of shortest week in month" data-shortest-week>
                 <div class="main__div-out" data-short-week></div>
-                <input type="button" value="Full weeks in month" class="main__btn" data-full-weeks>
+                <input class="main__btn" type="button" value="Full weeks in month" data-full-weeks>
                 <div class="main__div-out" data-out-full-weeks></div>
             </main>
         </container>
