--- a/homeworks/vadim.fedonyuk_Vadim1997/4-modules/index.html
+++ b/homeworks/vadim.fedonyuk_Vadim1997/4-modules/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@200;300&family=Poppins:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
