--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
@@ -4,33 +4,33 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <script type="module" src="./script.js"></script>
-        <script type="module" src="./time.js"></script>
+        <link rel="stylesheet" href="style.css">               
         <title>Document</title>
     </head>
     <body>
         <main class="main">
             <section class="section">
                 <p data-date>Date:</p>
-                <input type="date" value="2021-11-12" class="date__input" data-date__input></input>
+                <input type="date" value="2021-11-12" class="date-input" data-date-input></input>
             </section>
             <section class="section" data-get-mondays>
-                <button type="button" class="get-mondays__button" data-get-mondays__button>Get month mondays</button>
-                <p class="get-mondays__output" data-get-mondays__output></p>
+                <button type="button" class="get-mondays-button" data-get-mondays-button>Get month mondays</button>
+                <p class="get-mondays-output" data-get-mondays-output></p>
             </section>
             <section class="section" data-month-long>
-                <button type="button" class="month-long__button" data-month-long__button>Is month long?</button>
-                <p class="month-long__output" data-month-long__output></p>
+                <button type="button" class="month-long-button" data-month-long-button>Is month long?</button>
+                <p class="month-long-output" data-month-long-output></p>
             </section>
             <section class="section" data-shortest-week-day>
-                <button type="button" class="shortest-week-days__button" data-shortest-week-days__button>Days of shortest week in month</button>
-                <p class="shortest-week-days__output" data-shortest-week-days__output></p>
+                <button type="button" class="shortest-week-days-button" data-shortest-week-days-button>Days of shortest week in month</button>
+                <p class="shortest-week-days-output" data-shortest-week-days-output></p>
             </section>
             <section class="section" data-full-weeks>
-                <button type="button" class="full-weeks__button" data-full-weeks__button>Full weeks in month</button>
-                <p class="full-weeks__output" data-full-weeks__output></p>
+                <button type="button" class="full-weeks-button" data-full-weeks-button>Full weeks in month</button>
+                <p class="full-weeks-output" data-full-weeks-output></p>
             </section>
         </main>
+
+        <script type="module" src="./script.js"></script>
     </body>
 </html>
