fix syntax, functions, names

--- a/homeworks/roman.kushnirenko_skyprog/4-modules/index.html
+++ b/homeworks/roman.kushnirenko_skyprog/4-modules/index.html
@@ -10,33 +10,33 @@
     </head>
 
     <body>
-        <main class="all__date">
-            <section class="getdate">
-                <div class="input__date">
-                    <h4 class="date_name">Date:</h4>
-                    <input type="date" class="input">
+        <main class="date__wrapper">
+            <section class="show__date">
+                <div>
+                    <h4 class="date__title">Date:</h4>
+                    <input type="date" class="date__input" data-input>
                 </div>
                 <div class="mondays">
                     <button class="btn" data-mondays-btn type="button">Get month mondays</button>
-                    <div class="mondays__result show_result" data-mondays></div>
+                    <div class="mondays__result show__result" data-mondays></div>
                 </div>
                 <div class="monthlong">
                     <button class="btn" data-monthlong-btn type="button">Is month long?</button>
-                    <div class="monthlong__result show_result" data-monthlong></div>
+                    <div class="monthlong__result show__result" data-monthlong></div>
                 </div>
                 <div class="fullweeks">
                     <button class="btn" data-fullweeks-btn type="button">Full weeks in month</button>
-                    <div class="fullweeks__result show_result" data-fullweeks></div>
+                    <div class="fullweeks__result show__result" data-fullweeks></div>
                 </div>
                 <div class="shotestweek">
                     <button class="btn" type="button">Days of shortest week in month</button>
-                    <div class="shotestweek__result show_result"></div>
+                    <div class="shotestweek__result show__result"></div>
                 </div>
             </section>
 
-            <section class="showtime">
+            <section class="show__local__time">
                 <div class="current__time" data-current-time>9 : 00 : 01</div>
-                <select name="" id="" class="local__time" data-select-localtime>
+                <select name="" id="" class="select__local__time" data-select-localtime>
                     <option value="ukraine" selected>Ukraine</option>
                     <option value="tokyo">Tokyo</option>
                     <option value="new-york">New-York</option>
