added without decorations

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/4-modules/index_date.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/4-modules/index_date.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<head>
-    <title>Month</title>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <input type="date" data-date>
-    <div data-day-dates></div>
-    <button type="button" data-long>Long month?</button>
-    <div data-long-month></div>
-    <button type="button" data-btn-short-week>Amount of days of shortest week</button>
-    <div data-short-week></div>
-    <button type="button" data-btn-full-week>Amount of full weeks</button>
-    <div data-full-week></div>
-    <script type="module" src="script_date.js"></script>
-</body>
+<html lang="en">
+    <head>
+        <title>Month</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style_date.css">
+    </head>
+    <body>
+        <input type="date" data-date>
+        <div class="container">
+            <button type="button"></button>
+            <div class="container-content"></div>
+        </div>
+        <div class="container">
+            <button type="button"></button>
+            <div class="container-content"></div>
+        </div>
+        <div class="container">
+            <button type="button"></button>
+            <div class="container-content"></div>
+        </div>
+        <div class="container">
+            <button type="button"></button>
+            <div class="container-content"></div>
+        </div>
+        <script type="module" src="script_date.js"></script>
+    </body>
+</html>
