--- a/homeworks/Andrii.Morozov_AndriiMorozov88/4-modules/index_date.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/4-modules/index_date.html
@@ -8,20 +8,20 @@
     <body>
         <input type="date" data-date>
         <div class="container">
-            <button type="button"></button>
-            <div class="container-content"></div>
+            <button type="button" class="buttons" data-monday-button>get Mondays array</button>
+            <div class="container-content" data-monday-container></div>
         </div>
         <div class="container">
-            <button type="button"></button>
-            <div class="container-content"></div>
+            <button type="button" class="buttons" data-long-button>is month long?</button>
+            <div class="container-content" data-long-container></div>
         </div>
         <div class="container">
-            <button type="button"></button>
-            <div class="container-content"></div>
+            <button type="button" class="buttons" data-short-week-button>number days in shortest week</button>
+            <div class="container-content" data-short-week-container=""></div>
         </div>
         <div class="container">
-            <button type="button"></button>
-            <div class="container-content"></div>
+            <button type="button" class="buttons" data-full-week-button="">number of full weeks</button>
+            <div class="container-content" data-full-week-container=""></div>
         </div>
         <script type="module" src="script_date.js"></script>
     </body>
