--- a/homeworks/Aleksandr.Turuta_turuta7/4-flex/flex/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/4-flex/flex/index.html
@@ -11,13 +11,13 @@
 
     <body class="body" data-body>
         <div class="container">
-            <div class="header"></div>
-            <div class="main">
+            <header class="header"></header>
+            <main class="main">
                 <div class="main__left"></div>
                 <div class="main__center"></div>
                 <div class="main__right"></div>
-            </div>
-            <div class="footer"></div>
+            </main>
+            <footer class="footer"></footer>
         </div>
     </body>
 
