--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/4-moduls/index.html
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/4-moduls/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>4-Modules</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <title>4-Modules</title>
 </head>
 <body>
-    <section class="section-wrapper">
-        <div class="wrapper-div">
-            <form class="form-wrapper">
-                <p class="text-date">Date</p>
-                <input type="date" placeholder="Type date" class="date" data-date>
-                <button class="fridey-btn" data-monday-btn>Get month monday</button>
-                <p class="mondays-answer" data-mondays-answer>Monday in month: </p>
-                <button class="month-long" data-month-long>Is month long?</button>
-                <p class="mounth-long-answer" data-mounth-long-answer>Month is</p>
-                <button class="shortest-week-btn" data-shortest-week-btn>Days of shortest week in month</button>
-                <p class="shortest-week-answer" data-shortest-week-answer></p>
-                <button class="full-weeks" data-full-weeks>Full weeks in month</button>
-                <p class="fill-weeks-aswer" data-fill-weeks-aswer></p>
-            </form>
-        </div>
-    </section>
-    <script type="module" src="index.js"></script>
+  <section class="section-wrapper">
+    <div class="wrapper-div">
+      <p class="text-date">Date</p>
+      <input type="date" class="date" data-date>
+      <button type="button" class="mondey-btn" data-monday-btn>Get month monday</button>
+      <p class="mondays-answer" data-mondays-answer>Monday in month: </p>
+      <button type="button" class="month-long" data-month-long-btn>Is month long?</button>
+      <p class="mounth-long-answer" data-mounth-long-answer>Month is</p>
+      <button type="button" class="shortest-week-btn" data-shortest-week-btn>Days of shortest week in month</button>
+      <p class="shortest-week-answer" data-shortest-week-answer></p>
+      <button type="button" class="full-weeks" data-full-weeks-btn>Full weeks in month</button>
+      <p class="fill-weeks-aswer" data-full-weeks-aswer></p>
+    </div>
+  </section>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
