--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
@@ -9,7 +9,7 @@
         <header class="header">
             <h1 class="header__logo">Logo</h1>
             <nav class="header__menu">
-                <p class="menu__icon">&#9776</p>
+                <p class="menu__icon" data-burger-menu>&#9776</p>
                 <div class="menu__links">
                     <a href="#" class="links__item">News</a>
                     <a href="#" class="links__item">Contacts</a>
