updated rxjs logic

--- a/homeworks/vladyslav.kovalov_kovalov/5-rxjs/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/5-rxjs/index.html
@@ -14,11 +14,11 @@
         <header class="main-header" data-header>
             <div class="page-container main-header__container">
                 <span class="main-header__logo" data-header-logo>Logo</span>
-                <button type="button" class="page-button main-header__buy-button">Buy Now</button>
+                <button type="button" class="page-button main-header__buy-button display-none">Buy Now</button>
                 <button type="button" class="main-header__burger-button" data-dropdown-button>
                     <span class="main-header__burger-icon"></span>
                 </button>
-                <nav class="main-navigation display-none" data-dropdown-menu>
+                <nav class="main-navigation" data-dropdown-menu>
                     <ul class="navigation-list">
                         <li class="navigation-list__item">
                             <a href="#" class="navigation-list__link">One</a>
