updated header logic

--- a/homeworks/vladyslav.kovalov_kovalov/5-rxjs/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/5-rxjs/index.html
@@ -18,7 +18,7 @@
                 <button type="button" class="main-header__burger-button" data-dropdown-button>
                     <span class="main-header__burger-icon"></span>
                 </button>
-                <nav class="main-navigation" data-dropdown-menu>
+                <nav class="main-navigation display-none" data-dropdown-menu>
                     <ul class="navigation-list">
                         <li class="navigation-list__item">
                             <a href="#" class="navigation-list__link">One</a>
