--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
@@ -6,15 +6,15 @@
         <title>RX JS</title>
     </head>
     <body>
-        <header class="header">
-            <h1 class="header__logo">Logo</h1>
-            <nav class="header__menu">
-                <p class="menu__icon" data-burger-menu>&#9776</p>
-                <div class="menu__links">
-                    <a href="#" class="links__item">News</a>
-                    <a href="#" class="links__item">Contacts</a>
-                    <a href="#" class="links__item">About us</a>
-                </div>
+        <header class="header" data-header-container>
+            <div class="header__inner" data-header-inner>
+                <h1 class="header__logo">Logo</h1>
+                <p class="menu__icon" data-burger-icon>&#9776</p>
+            </div>
+            <nav class="header__menu" data-navigation>
+                <a href="#" class="navigation__link">News</a>
+                <a href="#" class="navigation__link">Contacts</a>
+                <a href="#" class="navigation__link">About us</a>
             </nav>
         </header>
         <main class="main">
@@ -36,7 +36,7 @@
                 Мета цього підручника – допомогти зрозуміти шляхи захисту інформації за допомогою різних інститутів права, відповідальність за порушення умов обробки, засоби накопичення та зберігання певних видів інформації, загальний порядок захисту електронного документообігу. Крім того, наведені в підручнику матеріали сприяють засвоєнню курсантами, студентами, слухачами правових методів захисту інформації та його процедур на різних стадіях циркуляції інформації, здійснення контрольно-перевірочного процесу з метою підтвердження відповідності наявної комплексної системи захисту інформації вимогам чинного законодавства тощо.
                 Вивчення такої дисципліни допоможе курсантам, студентам, слухачам більш повно аналізувати інформаційну діяльність підприємств, установ, організацій та уміло керувати правовим забезпеченням їх інформаційної безпеки.
             </p>
-            <button type="button" class="main__button">Button</button>
+            <button type="button" class="main__button" data-main-button>Button</button>
             <p class="main__text">Останніми роками можна спостерігати інтенсифікацію процесів, пов’язаних з упровадженням безпекових механізмів у всі сфери суспільного життя. Інформація при цьому є одним з основних об’єктів, який підлягає захисту за допомогою технічних, організаційних і правових заходів. Захист інформації за допомогою правових механізмів відіграє одну з провідних ролей у забезпеченні інформаційної безпеки та кібербезпеки держави.
                 Донедавна проблематика інформаційної безпеки була предметом дослідження здебільшого технічної науки, однак сьогодні вона набуває вже міжгалузевого характеру. Це підтверджується дослідженнями науковців, матеріалами Національного інституту стратегічних досліджень, результатами діяльності силових підрозділів тощо.
                 Велика кількість завдань із забезпечення інформаційної безпеки держави вирішуються правовими методами шляхом вдосконалення нормативно-правової бази у сфері забезпечення інформаційної безпеки, зокрема захисту інформаційних ресурсів, протидії кіберзлочинності, захисту персональних даних, а також правоохоронної діяльності в інформаційній сфері.
