hide header logic done

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>5-rxjs</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.6.3/rxjs.umd.min.js"
                 integrity="sha512-JnZPWAckMDks0CCIeGznqEo7ifmYK7VowHq/NVFlSXGkwxv4OBCJFy7nouOtJZmVldHo7FQLIdeWTI55yyZc4Q=="
@@ -9,16 +10,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="header">
+        <header class="header" data-header-visible>
             <h1 class="logo">Logo</h1>
             <nav class="top-nav">
                 <a class="top-nav__link" href="#">Новости</a>
                 <a class="top-nav__link" href="#">Контакты</a>
                 <a class="top-nav__link" href="#">Про нас</a>
+                <a class="top-nav__icon" href="#">&#9776;</a>
             </nav>
             <button type="button" class="buy-btn">BUY NOW</button>
         </header>
-
+        <main>
+            <div class="main-content"></div>
+        </main>
         <script src="main.js"></script>
     </body>
 </html>
