--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
@@ -8,8 +8,9 @@
     <body>
         <header class="header" data-header-container>
             <div class="header__inner" data-header-inner>
-                <h1 class="header__logo">Logo</h1>
-                <p class="menu__icon" data-burger-icon>&#9776</p>
+                <a href="" class="header__logo">Logo</a>
+                <div class="header__button" data-header-btn></div>
+                <div class="menu__icon" data-burger-icon>&#9776</div>
             </div>
             <nav class="header__menu" data-navigation>
                 <a href="#" class="navigation__link">News</a>
