the update includes a mentor's recommendation

--- a/homeworks/roman.buzukov_BuzRom/5-rxjs/index.html
+++ b/homeworks/roman.buzukov_BuzRom/5-rxjs/index.html
@@ -18,7 +18,7 @@
             <div class="header__main" data-header-logo-menu>
                 <div class="header__main-logo">Logo</div>
                 <div class="header__main-burger" data-menu-burger>
-                    <span></span>
+                    <span class="header__main-burger-stick"></span>
                 </div>
                 <nav class="header__main-menu menu" data-menu-body>
                     <ul class="menu__list">
