--- a/homeworks/maksym.selenkov_MaksymSelenkov/5-rxjs/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/5-rxjs/index.html
@@ -11,13 +11,18 @@
     <body>
         <div class="container" data-container>
             <header class="header" data-header>
-                <nav class="header__nav">
-                    <span class="header__logo">Logo</span>
+                <span class="header__logo">Logo</span>
+                <div data-burger>
+                    <div class="header__burger-icon"></div>
+                    <div class="header__burger-icon"></div>
+                    <div class="header__burger-icon"></div>
+                </div>
+                <nav class="header__nav" data-navigation>
                     <a class="header__link" href="">News</a>
                     <a class="header__link" href="">Contacts</a>
                     <a class="header__link" href="">About us</a>
-                    <button type="button" class="header__buy">Buy now</button>
                 </nav>
+                <button type="button" class="header__buy" data-buy>Buy now</button>
             </header>
             <main class="main" data-main>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet illum, placeat quasi qui quidem tempora velit! Dolores, sapiente, sequi. Aliquam atque dolor eveniet ex harum ipsa maxime, porro suscipit voluptas.
