--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
@@ -6,16 +6,22 @@
         <title>RX JS</title>
     </head>
     <body>
+        <div class="header__afterBtn" data-afterBtn-header>
+            <h1 class="afterBtn__title">Get an amazing discount</h1>
+            <button type="button" class="afterBtn__btn">Buy me</button>
+        </div>
         <header class="header" data-header-container>
             <div class="header__inner" data-header-inner>
                 <a href="" class="header__logo">Logo</a>
-                <div class="header__button" data-header-btn></div>
+                <div class="header__buttonContainer" data-header-btn>
+                    <button type="button" class="afterBtn__btn">Buy me</button>
+                </div>
                 <div class="menu__icon" data-burger-icon>&#9776</div>
             </div>
             <nav class="header__menu" data-navigation>
-                <a href="#" class="navigation__link">News</a>
-                <a href="#" class="navigation__link">Contacts</a>
-                <a href="#" class="navigation__link">About us</a>
+                <a href="#" class="menu__link">News</a>
+                <a href="#" class="menu__link">Contacts</a>
+                <a href="#" class="menu__link">About us</a>
             </nav>
         </header>
         <main class="main">
