--- a/homeworks/serhii.kulakivskyi_svkul/5-rxjs/index.html
+++ b/homeworks/serhii.kulakivskyi_svkul/5-rxjs/index.html
@@ -22,7 +22,7 @@
                 <a class="logo" href=".">Logo</a>
 
                 <div class="header__content" data-nav>
-                    <button class="header__nav-button" type="button" data-nav-btn>
+                    <button class="header__nav-button" data-nav-btn type="button">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path>
                         </svg>
@@ -97,7 +97,7 @@
                 Velit ullam labore corporis veniam, nihil quia. Fugit adipisci, eveniet veritatis provident ipsum ullam fuga, impedit nobis reprehenderit aspernatur quae quisquam placeat iusto error harum corporis minima quos praesentium similique?
             </p>
 
-            <button class="button button--main" type="button" data-buy-now>Buy now</button>
+            <button class="button button--main" data-buy-now type="button">Buy now</button>
 
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur dicta amet commodi autem laborum ad officiis, soluta consequuntur fuga ut quae asperiores, cum eum voluptatem. Voluptates accusantium quae quas molestias!
