page logo fixed

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/5-rxjs/index.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/5-rxjs/index.html
@@ -9,7 +9,11 @@
     </head>
     <body>
         <header class="main-header" data-main-header>
-            <span class="header__logo">Logo</span>
+            <ul class="header__logo">
+                <li class="logo__item">
+                    <a class="logo__link" href="https://20-igorek-21.github.io/frontend-course-2021/homeworks/ihor.kropyvnyi_20-Igorek-21/5-rxjs/index.html#">Logo</a>
+                </li>
+            </ul>
             <button class="header__menu-toggle" data-menu-toggle type="button">
                 <span class="header__menu-toggle-line"></span>
             </button>
