--- a/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/5-rxjs/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/5-rxjs/5-rxjs/index.html
@@ -10,9 +10,14 @@
     </head>
 
     <body class="body" data-body>
+        <label class="nav__label-chech" for="check">
+            <input class="nav__label-chech-input" type="checkbox" id="check" data-input>
+            <span ></span>
+            <span></span>
+            <span></span>
+        </label>
 
         <header class="header" data-header>
-
             <div class="header__logo">
                 <h1 class="header__title">Logo</h1>
             </div>
@@ -31,14 +36,6 @@
 
             </nav>
         </header>
-
-        <label class="nav__label" for="check">
-            <input type="checkbox" id="check" data-input>
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-
         <main class="main">
             <div class="main__container">
                 <p class="main__contalner-text">
