defined Observable for click events and subscribers on nav elements click's

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
@@ -13,10 +13,10 @@
         <header class="header" data-header-visible>
             <h1 class="logo">Logo</h1>
             <nav class="top-nav">
-                <a class="top-nav__link" href="#">Новости</a>
-                <a class="top-nav__link" href="#">Контакты</a>
-                <a class="top-nav__link" href="#">Про нас</a>
-                <a class="top-nav__icon" href="#">&#9776;</a>
+                <a class="top-nav__link" href="#" data-nav-item>Новости</a>
+                <a class="top-nav__link" href="#" data-nav-item>Контакты</a>
+                <a class="top-nav__link" href="#" data-nav-item>Про нас</a>
+                <a class="top-nav__icon" href="#" data-nav-burger>&#9776;</a>
             </nav>
             <button type="button" class="buy-btn">BUY NOW</button>
         </header>
