styles and class name - corect

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/5-rxjs/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/5-rxjs/index.html
@@ -14,13 +14,14 @@
         <section class = "section">
             <header class = "header" data-attr-header>
                 <nav class = "header__nav">
-                    <div class = "header__nav_logo">LOGO</div>
-                    <div class = "header__nav_menu" data-nav-menu>
-                        <a class = "header__nav_menu_link" href = "#news">News</a>
-                        <a class = "header__nav_menu_link" href = "#contact">Contacts</a>
-                        <a class = "header__nav_menu_link" href = "#about">About</a>
+                    <div class = "header__logo">LOGO</div>
+                    <div class = "header__menu" data-nav-menu>
+                        <a class = "header__nav-link" href = "#news">News</a>
+                        <a class = "header__nav-link" href = "#contact">Contacts</a>
+                        <a class = "header__nav-link" href = "#about">About</a>
                         <a class = "icon" href = "javascript:void(0);" data-min-menu>
-                            <i class = "fa fa-bars"></i>
+                            <i class = "fa fa-bars" data-attr-bars></i>
+                            <i class = "fa fa-times" style="display: none" data-attr-times></i>
                         </a>
                     </div>
                 </nav>
