--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
@@ -12,11 +12,11 @@
     <body>
         <header class="header" data-header-visible>
             <h1 class="logo">Logo</h1>
-            <nav class="top-nav">
+            <button class="top-nav-resp-btn" type="button" data-nav-burger>&#9776;</button>
+            <nav class="top-nav top-nav_hidden" data-nav-conainer>
                 <a class="top-nav__link" href="#" data-nav-item>Новости</a>
                 <a class="top-nav__link" href="#" data-nav-item>Контакты</a>
                 <a class="top-nav__link" href="#" data-nav-item>Про нас</a>
-                <a class="top-nav__icon" href="#" data-nav-burger>&#9776;</a>
             </nav>
             <button type="button" class="buy-btn">BUY NOW</button>
         </header>
