fix bugs on scroll and media queries

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/5-rxjs/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="header" data-header-visible>
+        <header class="header" data-header>
             <h1 class="logo">Logo</h1>
             <button class="top-nav-resp-btn" type="button" data-nav-burger>&#9776;</button>
             <nav class="top-nav top-nav_hidden" data-nav-conainer>
