--- a/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/index_rxjs.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/5-rxjs/index_rxjs.html
@@ -9,7 +9,7 @@
     <body>
         <header class="header__content" data-header>
             <div class="header__content-logo">NightWatchers</div>
-            <ul class="header__content-menu-ul">
+            <ul class="header__content-menu-ul" data-menu>
                 <li class="header__content-menu-li">
                     <a href="#">About us</a>
                 </li>
@@ -20,7 +20,7 @@
                     <a href="#">Contacts</a>
                 </li>
             </ul>
-            <div class="header__burger">
+            <div class="header__burger" data-burger>
                 <div class="header__burger-line"></div>
                 <div class="header__burger-line"></div>
                 <div class="header__burger-line"></div>
