--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/index.html
@@ -6,25 +6,30 @@
         <title>RX JS</title>
     </head>
     <body>
-        <div class="header__afterBtn" data-afterBtn-header>
-            <h1 class="afterBtn__title">Get an amazing discount</h1>
-            <button type="button" class="afterBtn__btn">Buy me</button>
-        </div>
-        <header class="header" data-header-container>
-            <div class="header__inner" data-header-inner>
-                <a href="" class="header__logo">Logo</a>
-                <div class="header__buttonContainer" data-header-btn>
-                    <button type="button" class="afterBtn__btn">Buy me</button>
+        <header class="header" data-header>
+            <!-- Default header   -->
+            <div class="header__inner-default" data-header-default>
+                <div class="default__titleBurger">
+                    <a href="" class="header__logo">Logo</a>
+                    <button type="button" class="header__button" data-defHeader-button>Buy me</button>
+                    <div class="menu__icon" data-burger-icon>&#9776</div>
                 </div>
-                <div class="menu__icon" data-burger-icon>&#9776</div>
+                <nav class="header__menu" data-navigation>
+                    <a href="#" class="menu__link">News</a>
+                    <a href="#" class="menu__link">Contacts</a>
+                    <a href="#" class="menu__link">About us</a>
+                </nav>
             </div>
-            <nav class="header__menu" data-navigation>
-                <a href="#" class="menu__link">News</a>
-                <a href="#" class="menu__link">Contacts</a>
-                <a href="#" class="menu__link">About us</a>
-            </nav>
+
+            <!-- After btn scroll down  -->
+            <div class="header__inner-afterBtn" data-header-after-button>
+                <h1 href="#" class="titleButton__title">
+                    Get an amazing discount
+                </h1>
+                <button type="button" class="header__button" data-afterBtn-button>Buy me</button>
+            </div>
         </header>
-        <main class="main">
+        <main class="main" data-main>
             <p class="main__text">Останніми роками можна спостерігати інтенсифікацію процесів, пов’язаних з упровадженням безпекових механізмів у всі сфери суспільного життя. Інформація при цьому є одним з основних об’єктів, який підлягає захисту за допомогою технічних, організаційних і правових заходів. Захист інформації за допомогою правових механізмів відіграє одну з провідних ролей у забезпеченні інформаційної безпеки та кібербезпеки держави.
                 Донедавна проблематика інформаційної безпеки була предметом дослідження здебільшого технічної науки, однак сьогодні вона набуває вже міжгалузевого характеру. Це підтверджується дослідженнями науковців, матеріалами Національного інституту стратегічних досліджень, результатами діяльності силових підрозділів тощо.
                 Велика кількість завдань із забезпечення інформаційної безпеки держави вирішуються правовими методами шляхом вдосконалення нормативно-правової бази у сфері забезпечення інформаційної безпеки, зокрема захисту інформаційних ресурсів, протидії кіберзлочинності, захисту персональних даних, а також правоохоронної діяльності в інформаційній сфері.
